# squirt

./: .env.example  .gitignore  ACTION_README.md  CHANGELOG.md  CONTRIBUTING.md  EXECUTIVE_OVERVIEW.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  action.yml  builtins.py  cli.py  client.py  extensions.py  pyproject.toml  release-guide.sh  release.sh  verify-release.sh
categories/: __init__.py
contrib/: __init__.py
contrib/chunk/: __init__.py  metrics.py
contrib/data/: __init__.py
contrib/llm/: __init__.py  metrics.py
contrib/vector/: metrics.py
core/: __init__.py  decorator.py  resources.py  types.py
docs/: api.md  github-action-usage.md
reporting/: aggregation.py
squirt/: __init__.py  builtins.py  cli.py  client.py  extensions.py  filters.py  m.py  metrics.py  pytest.py
squirt/analysis/: __init__.py  graph_builder.py
squirt/categories/: __init__.py  system.py
squirt/contrib/: __init__.py
squirt/contrib/chunk/: __init__.py  metrics.py
squirt/contrib/data/: __init__.py  metrics.py
squirt/contrib/echo/: __init__.py  metrics.py
squirt/contrib/llm/: __init__.py  metrics.py
squirt/contrib/tokens/: __init__.py  metrics.py
squirt/contrib/vector/: __init__.py  metrics.py
squirt/core/: __init__.py  decorator.py  resources.py  types.py
squirt/docs/: api.md  custom_metrics_guide.md  filtering.md  github-actions.md  instrumentation.md  metrics.md  reporting.md
squirt/plugins/: __init__.py  base.py
squirt/reporting/: __init__.py  aggregation.py  insights.py  reporter.py
squirt/tests/: __init__.py  example_assertion_metrics.py  example_real_world_assertions.py  test_aggregation.py  test_assertion_integration.py  test_assertion_metrics.py  test_error_free_assertions.py  test_filters.py  test_metrics_unit.py  test_sleuth.py  test_squirt.py  test_two_tier_integration.py  test_two_tier_metrics.py
squirt/transforms/: __init__.py  cost.py  performance.py  runtime.py  similarity.py  tokens.py  utility.py  validation.py
tests/: test_aggregation.py  test_assertion_metrics.py  test_metrics_unit.py  test_two_tier_integration.py
transforms/: __init__.py  cost.py  runtime.py  similarity.py  validation.py
