[project]
name = "squirt"
version = "0.2.9"
description = "Metrics collection and analysis library for component testing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Logan Powell", email = "logan.powell@hey.com"}
]
keywords = ["metrics", "testing", "observability", "instrumentation", "ci-cd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]

dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "mypy>=1.19.1",
    "ruff>=0.1.0",
]
azure = [
    "azure-ai-projects>=2.0.0b1",
    "azure-identity>=1.25.1",
    "azure-ai-evaluation>=1.13.7",
]
llm = [
    "openai>=1.59.9,<2.0.0",
    "anthropic>=0.75.0",
]
viz = [
    "networkx>=3.0,<4.0",
]
all = [
    "squirt[azure,llm,viz]",
]

[project.scripts]
squirt = "squirt.cli:main"

[project.urls]
Homepage = "https://github.com/loganpowell/squirt"
Documentation = "https://github.com/loganpowell/squirt#readme"
Repository = "https://github.com/loganpowell/squirt"
Issues = "https://github.com/loganpowell/squirt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["squirt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers -q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
branch = true
source = ["squirt"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B039",  # ContextVar with mutable defaults is intentional for our use case
    "E402",  # Module level imports not at top - intentional for optional dependencies
    "N817",  # CamelCase imported as acronym - intentional for brevity
    "N806",  # Variable in function should be lowercase - intentional for constants
    "SIM102",  # Use single if statement - readability preference
    "SIM103",  # Return condition directly - readability preference  
    "SIM108",  # Use ternary operator - readability preference
    "B007",  # Loop control variable not used - intentional in destructuring
    "B904",  # raise ... from err - not always applicable
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
